    DETAIL: mxcEventDetailStateDateStamp, mxcEventDetailStateTimeStamp, mxcEventDetailEndDateStamp, mxcEventDetailEndTimeStamp
    LIST: mxcEventTitle, mxcEventUrl, mxcEventUrlRel, mxcEventUrlTarget, mxcEventDetailStateDateStamp, mxcEventDetailStateTimeStamp, mxcEventDetailEndDateStamp, mxcEventDetailEndTimeStamp

--------------------------
Release: (0.1.3)
--------------------------
Change Log:
- Typo corrections to parameters & placeholders: mxcMonthCotianerHeading -> mxcMonthContainerHeading, mxcMonthContianerClass -> mxcMonthContainerClass
- Bug fix: Issue 38 Advanced Date Entry not activating when set to true in configuration
- Enhancement: New custom field builder with custom placeholders; note that type "resource" also has the following static placeholders (mxcpagetitle, mxcdescription, mxcalias, mxccontent)


--------------------------
Release: (0.1.2-rc2)
--------------------------
Change Log:
- Bug fix (Issue 35): Event weekly repeat dates not parsing properly
- Enhancement: When adding repeat event with more than on day of the week ("Occurs On") will add any days to the current week of the given start date

File Log: 
M       mxCalendar.tpl.php
C       includes/install/0.1.2-rc2.upgrade.mysql
M       Release_Notes.txt
M       mxCalendar.class.php


--------------------------
Release: (0.1.0-rc1)
--------------------------
Change Log:
- Bug fix: Rich text editor for the events manager in ModX versions > 1.0.1
- Bug fix: Event List display incorrect date of spanning event spanning multiple dates, the date increments incorrectly
- Bug fix: Event List view title link to home page of site vs defined &mxcFullCalendarPgId parameter value
- Bug fix: mxcTplEventListItemWrap fixed the parsing so custom chunks are parsed properly
- mxcJSCodeSource - New parameter for setting the JS code base to use (MooTools is the current support, but plans to expand to JQuery are in the works)